# eic_EarlyScience

./: .gitignore  25.10.4.root  25.10.4.txt  25.12.0.root  25.12.0.txt  CLAUDE.md  CMakeLists.txt  DDIS_BinningPlots.root  PLOT_ORGANIZATION.md  README.md  bin_occupancy.yaml  binning_inputs.root  binning_presentation.tex  final.root  main.tex  plot_output.txt  plot_output2.txt  plot_output3.txt  plot_output4.txt  plot_output5.txt  plot_output_final.txt  run.sh  run_parallel.sh  scrambled_list.txt  use_W2best_for_nominal_xpom_beta.md
25.12.0/: 25.12.0.txt  file_names.py  xrootd_downloader.py
Feb3/: Feb3.tex
analysis/: AdaptiveBinning.cpp  DDIS_Plot_Binning.cpp  DDIS_Plot_Combined_FINAL.cpp  DDIS_Plot_Final.cpp  DDIS_Skim_BinningInputs.cpp  DDIS_Skim_Combined.cpp  DDIS_Skim_Final.cpp  DDIS_Skim_t.cpp  Example_UseBinning.cpp  MERGE_SUMMARY.md  Plot_BinningScheme.cpp  Plot_BinningScheme_Interactive.cpp  Plot_BinningScheme_WithCounts.cpp  compile_adaptive_binning.sh  run_interactive_binning.sh
data/: bin_occupancy.yaml  binning_scheme.txt  binning_scheme_cells.txt  bins_output.txt  bins_template.yaml
docs/: electronid_and_today_changes.md  mx2_inputs.md
figs/cross_sections/debug/: sigma_r_debug_xpom_0p0025.tsv  sigma_r_debug_xpom_0p0044.tsv  sigma_r_debug_xpom_0p0065.tsv  sigma_r_debug_xpom_0p0078.tsv  sigma_r_debug_xpom_0p0139.tsv  sigma_r_debug_xpom_0p015.tsv  sigma_r_debug_xpom_0p0247.tsv  sigma_r_debug_xpom_0p025.tsv  sigma_r_debug_xpom_0p0439.tsv  sigma_r_debug_xpom_0p045.tsv  sigma_r_debug_xpom_0p0781.tsv  sigma_r_debug_xpom_0p08.tsv
include/: Afterburn.hpp  BinningUtility.hpp  Cutflow.hpp  ElectronID.hh  GridDrawing.hpp  PlotDrawing.hpp  Plotting.hpp  RecoMethods.hpp  ResolutionBinning.hpp  SkimFileList.hpp  TruthKinematics.hpp  W2Best.hpp  YAMLBinning.hpp
include/plots/: DDISPlots.hpp
plotting/: GridDrawing.cpp  PlotDrawing.cpp  PlotOptions.cpp  PlotOptions1D.cpp  PlotOptions2D.cpp  PlotOptionsBinnedRelRes.cpp  PlotOptionsCombinedCorrelation.cpp  PlotOptionsRelRes.cpp  PlotOptionsResponseMatrix.cpp
plotting/plots/: Plot3DResponseMatrix.cpp  PlotDensityFromHist.cpp  PlotDensityFromHistWithOverlay.cpp  PlotEPzWithCuts.cpp  PlotElectronIDComparison.cpp  PlotGraphDensity.cpp  PlotMX2Comparison.cpp  PlotPhaseSpaceSlices.cpp  PlotRecoSetComparison.cpp  PlotRecoSetComparisonBR.cpp  PlotRecoSetComparisonBRSumOnly.cpp  PlotRecoSetComparisonBRWithSetBUncorrected.cpp  PlotRecoSetUncorrected.cpp  PlotRelResVsK.cpp  PlotResolutionComparison.cpp  PlotTBinMetric.cpp  PlotXQ2Density.cpp  PlotXQ2PhaseSpaceWithLines.cpp
results_beamer/: main.tex
utility/: Cutflow.cpp  ElectronID.cpp  ResolutionBinning.cpp  SkimFileList.cpp  TruthKinematics.cpp  Utility.cpp  W2Best.cpp
